--- a/public/index.html
+++ b/public/index.html
@@ -4,31 +4,245 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Realtime Prices &amp; Inventory - TeamFairmont BoltEngine demo</title>
+    <title>Prices &amp; Inventory Demo - TeamFairmont BoltEngine</title>
 
     <!-- Bootstrap -->
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        html,body {
+            background: #444;
+        }
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        .container-fluid {
+            color: #eee;
+        }
+
+        #product-template-wrap {
+            display:none;
+        }
+
+        .container-fluid .product {
+            float:left;
+            width: auto;
+            background: #777;
+            margin: 5px;
+            margin-left: 0px;
+            padding: 5px;
+            border-radius: 5px 5px;
+            /*box-shadow: 2px 2px 0px #000;*/
+            transition: background 4s linear;
+            -webkit-transition: background 4s linear;
+            -moz-transition: background 4s linear;
+        }
+
+        h6 { font-size: 14px; display:block; margin-top:3px; margin-bottom:3px; font-weight:bold; }
+        h7 { font-size: 12px;  display:block;  font-weight:bold;}
+
+        .clear { clear:both;}
+    </style>
+
+    <!-- Only used for the 'simulated' price updates, since this
+    would normally be an external service hitting the engine -->
+    <!-- Import the crypto library.  We're using crypto-js -->
+    <!-- https://code.google.com/p/crypto-js/ -->
+    <script src="static/js/CryptoJSv312/rollups/aes.js"></script>
+    <script src="static/js/CryptoJSv312/components/enc-base64-min.js"></script>
+    <script src="static/js/CryptoJSv312/rollups/hmac-sha512.js"></script>
+
+    <!-- Import the javascriptbase64 library  -->
+    <!-- http://javascriptbase64.googlecode.com -->
+    <script src='static/js/base64.js' type='text/javascript'></script>
+
   </head>
   <body>
 
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12" style="margin-bottom:10px">
+                <h1>Products Live View</h1>
+                <div id="stats">
+                    <button class="btn btn-sm btn-success" id="start">Start Live Updates</button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12" id="product-container">
 
-    <h1>Hello, world!</h1>
+            </div>
+        </div>
+    </div>
 
+    <div id="product-template-wrap">
+        <div class="product">
+            <div class="clear"></div>
+            <h6>PRODUCT NAME</h6>
+            <h7 class="price">PRICE</h7>
+            <h7 class="inv">INVENTORY</h7>
+        </div>
+    </div>
 
-
-
-
+    <!-- Modal -->
+    <div class="modal fade" id="prodModal" tabindex="-1" role="dialog" aria-labelledby="prodModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Product Detail</h4>
+          </div>
+          <div class="modal-body">
+              <div class="product">
+                  <img src="static/prod.jpg"/><br>
+                  <h3>PRODUCT NAME</h3>
+                  <h4 class="price">PRICE</h4>
+                  <h4 class="inv">INVENTORY</h4>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="static/js/bootstrap.min.js"></script>
+
+    <script>
+        function moveToTop(sku) {
+            $("#product-container .product."+sku).hide().fadeIn(250);
+            $("#product-container .product."+sku).insertBefore($("#product-container .product")[0]);
+        }
+
+        function addProductInfo(data) {
+            var o = $("#product-container .product."+data.sku);
+            if (o.length==0) {
+                o = $($("#product-template-wrap").html());
+                o.addClass(data.sku);
+                o.attr("data-sku", data.sku);
+                o.click(function(e) {
+                    $("#prodModal .product h3").html($("#product-container .product."+$(e.target).attr("data-sku")+" h6").text());
+                    $("#prodModal .product h4.price").html($("#product-container .product."+$(e.target).attr("data-sku")+" h7.price").text());
+                    $("#prodModal .product h4.inv").html($("#product-container .product."+$(e.target).attr("data-sku")+" h7.inv").text());
+                    $("#prodModal").modal();
+                });
+                $("#product-container").prepend(o);
+            }
+            $("#product-container .product."+data.sku+" h6").html(data.sku);
+            $("#product-container .product."+data.sku+" h7.price").html("$"+data.price);
+            $("#product-container .product."+data.sku+" h7.inv").html(data.inventory);
+
+            moveToTop(data.sku);
+        }
+
+        function getChangedProducts(since) {
+            //let the ruby server make the request to the engine API
+            var s=new Date();
+            $.ajax({
+              dataType: "json",
+              url: "/get-updates?last="+since,
+              success: function(data) {
+                  //check if 'success' is true, set last load time, then loop through and update page
+                  if (typeof data.products!="undefined") {
+                      stats.last_load = new Date();
+                      stats.updates++;
+                      var e = new Date();
+                      stats.response_time = e.getTime()-s.getTime();
+                      //TODO loop through and update products
+                      for (var i=0; i<data.products.length; i++) {
+                          addProductInfo(data.products[i]);
+                      }
+                  } else {
+                      console.log(data);
+                  }
+
+                  setTimeout(function(){ getChangedProducts(stats.last_load.getTime()); }, 200);
+              },
+              error: function(err) {
+
+                  console.log(err);
+              }
+            });
+        }
+
+        function updateStats() {
+            //update stats div
+            var s="";
+            for (k in stats) {
+                s+= k+"="+stats[k]+" / ";
+            }
+            $("#stats").text(s);
+            setTimeout(function(){ updateStats(); }, 1000);
+        }
+
+        var stats = {"updates":0, "response_time": 0, "last_load": new Date()};
+        $("#start").click(function() {
+            getChangedProducts(0);
+            updateStats();
+            prodChanger();
+        });
+
+        $(document).ready(function() {
+            //send req to server to get prod info
+        });
+
+        //**************************************
+        // this section of js is all for the 'price update' simulation
+        // might move this to separate app or tab
+        //**************************************
+        function prodChanger() {
+            //send req to engine directly to calculate a new prod value
+            // Create a json object with the message to encode and a timestamp
+            var payload = {
+              "timestamp": Math.floor(Date.now() / 1000).toString(),
+              "message": JSON.stringify({ "sku":"[ANY]" })
+            };
+
+            // Create the signed string
+            var signature = CryptoJS.HmacSHA512(JSON.stringify(payload), "some_hmac_key");
+
+            // Encode the payload and signature to Base64
+            var basePayload = Base64.encode(JSON.stringify(payload));
+            var baseSignature = Base64.encode(signature.toString());
+
+            // Combine the encoded message with the key signature
+            var jsonStr = {
+              "data": basePayload,
+              "signature": baseSignature
+            }
+
+            $.ajax({
+              method: 'Post',
+              url: "http://localhost:8888/request/rtservice/update-price-inv",
+              xhrFields: {
+                withCredentials: true
+              },
+              data: JSON.stringify(jsonStr),
+              beforeSend: function(xhr) {
+                // The username is the hmacgroup name.
+                // The password isn't used since the request uses hmac authentication.
+                username = "rtservice";
+                password = "password_ignored";
+                xhr.setRequestHeader("Authorization", make_base_auth(username, password));
+              },
+              success: function(data) {
+                console.log("success");
+                console.log(data);
+
+                setTimeout(function(){ prodChanger(); }, 100);
+              },
+              error: function(data) {
+                alert("ENGINE ERROR, STOPPING UPDATES ");
+                console.log(data);
+              }
+            });
+        }
+
+        function make_base_auth(user, password) {
+          var tok = user + ':' + password;
+          var hash = btoa(tok);
+          return "Basic "+hash;
+        }
+
+
+    </script>
   </body>
 </html>
